--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -15,11 +15,7 @@
         <img src="loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1591462134780-7fa6e0abf286?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1591462134780-7fa6e0abf286?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=375&q=80" alt="">
-        
-    </div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
