--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -10,8 +10,10 @@
 <body>
     <!-- Title -->
     <h1>Unsplash API - Infinite</h1>
+    <!-- Search bar -->
+    <!-- <input type="text" id="search"> -->
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
