--- a/light-dark-mode/index.html
+++ b/light-dark-mode/index.html
@@ -11,8 +11,8 @@
 <body>
     <!-- Dark Mode Switch -->
     <div class="theme-switch-wrapper">
-        <span class="toggle-icon">
-            <span class="toggle-text">Light Mode</span>
+        <span id="toggle-icon">
+            <span id="toggle-text">Light Mode</span>
             <i class="fas fa-sun"></i>
         </span>
         <label class="theme-switch">
