--- a/form-validation/index.html
+++ b/form-validation/index.html
@@ -15,38 +15,38 @@
             <!-- Full name -->
             <div class="form-group">
                 <label for="name">Full Name</label>
-                <input type="text" id="name" placeholder="Juan"
+                <input type="text" id="name" placeholder="Juan" name="name"
                     required minlength="3" maxlength="100">
             </div>
             <!-- Phone Number -->
             <div class="form-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" placeholder="317-671-9710"
+                <input type="tel" id="phone" placeholder="317-671-9710" name="phone"
                     required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
                     title="Please include a dash as the example">
             </div>
             <!-- Email Address -->
             <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" id="email" placeholder="example@adress.com"
+                <input type="email" id="email" placeholder="example@adress.com" name="email"
                     required>
             </div>
             <!-- Website URL -->
             <div class="form-group">
                 <label for="website">Website</label>
-                <input type="url" id="website" placeholder="https://github.com/juan17castillo"
+                <input type="url" id="website" placeholder="https://github.com/juan17castillo" name="website"
                     required>
             </div>
             <!-- Password -->
             <div class="form-group">
                 <label for="password1">Password</label>
-                <input type="password" id="password1" placeholder="(Min. 8 characters)"
+                <input type="password" id="password1" placeholder="(Min. 8 characters)" 
                     required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
                     title="Please include at least 1 uppercase character and a number">
             </div>
             <div class="form-group">
                 <label for="password2">Confirm Password</label>
-                <input type="password" id="password2" placeholder="Confirm password"
+                <input type="password" id="password2" placeholder="Confirm password" name="password"
                     required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$">
             </div>
             <!-- Button Submit -->
