Progress bar functionality added

--- a/music-player/index.html
+++ b/music-player/index.html
@@ -19,11 +19,11 @@
         <h3 id="artist">Beéle</h3>
         <audio src="music/loco.mp3"></audio>
         <!-- Progress -->
-        <div class="progress-container">
+        <div class="progress-container" id="progress-container">
             <div class="progress" id="progress"></div>
             <div class="duration-wrapper">
                 <span id="current-time">0:00</span>
-                <span id="current-time">3:24</span>
+                <span id="duration">3:24</span>
             </div>
         </div>
         <!-- Controls -->
